# libjni

./: .gitignore  CMakeLists.txt  README.md
src/: Reg.cpp  Reg.h
src/test/: CMakeLists.txt  test.cpp
src/wrapper/: JNI.cpp  JNI.h
